<resources>
    <string name="app_name" translatable="false">LungCare</string>

    <string name="label_home">Home</string>
    <string name="label_history">History</string>
    <string name="label_profile">Profile</string>

    <string name="login_to_your_account">Log in to your account</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="or">OR</string>
    <string name="dont_have_account">Don\'t have an account?</string>
    <string name="register_here">Register here</string>
    <string name="login_here">Login here</string>
    <string name="already_have_account">Already have an account?</string>
    <string name="create_your_account">Create your account</string>
    <string name="register">Register</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="email_not_valid">Email is invalid</string>
    <string name="password_not_valid">Password is too short (minimum is 8 characters)</string>

    <string name="welcome_message" translatable="false">Hi, %1$s!</string>

    <string name="err_name_field">Name Can\'t be blank</string>
    <string name="err_email_field">Email Can\'t be blank</string>
    <string name="err_password_field">Password Can\'t be blank</string>
    <string name="err_open_camera">Failed to open camera</string>
    <string name="err_permission">Permission not granted</string>
    <string name="err_take_picture">Failed to take picture</string>
    <string name="err_capture_picture">Photo capture failed</string>
    <string name="err_image_field">Picture can\'t be blank</string>
    <string name="err_login_message">Login Failed</string>

    <string name="signup_success_message">Registration successful!</string>
    <string name="login_success_message">Login successful!</string>

    <string name="body_message_post_xray">Note: You need to upload first the X-ray image through a camera or gallery.</string>

    <string name="detect_your_lung_problem">Detect your lung problem</string>

    <string name="gallery">Select from Gallery</string>
    <string name="camera">Use Camera</string>
    <string name="detect">Detect X-ray</string>

    <string name="how_are_you_today">How Are you Today?</string>

    <string name="scan_xray">Scan X-ray</string>

    <string name="prediction_result">Prediction Result:</string>
    <string name="result_here">Result Here</string>


    <string name="feature_not_available">Feature not available</string>

    <string name="date">Date:</string>
    <string name="dummy_date">08–06–2023 06:05</string>
    <string name="dummy_result">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce consequat mollis augue, eget lobortis eros condimentum sed. Sed iaculis nunc ante, non faucibus libero laoreet eu. Sed sodales luctus tempus. Nulla facilisi. Phasellus feugiat pellentesque elit, id suscipit mi aliquam sed. Aenean ultrices, sem condimentum dapibus pellentesque, velit nunc dapibus leo, eget fermentum augue augue at nulla. Donec tempor felis et mi convallis dapibus.</string>

    <string name="choose_picture">Choose a picture</string>

    <string name="placeholder_result">Result</string>

    <string name="dummy_article_title">Tips Menjaga Kesehatan Paru-paru</string>
    <string name="dummy_category_title">news</string>
    <string name="article_title">Title</string>
    <string name="article_category">Category</string>

    <string name="content_desc_to_post_xray_page">to X-ray detection page</string>
    <string name="content_desc_image_preview">Preview image to be detect</string>
    <string name="content_desc_capture">Take photo</string>

    <string name="view_more">View more</string>

    <string name="language">Language</string>
    <string name="profile_setting">Profile settings</string>
    <string name="terms_of_service">Terms of service</string>

    <string name="article">Relate Articles</string>
    <string name="diagnosis">Diagnosis</string>
</resources>