<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.profile.ProfileFragment">

    <Button
        android:id="@+id/profileSettingBtn"
        style="@style/Widget.Material3.Button.TextButton"
        android:layout_width="@dimen/default_size"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_s"
        android:layout_marginTop="@dimen/margin_l"
        android:layout_marginEnd="@dimen/margin_s"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/profile_setting"
        android:textAlignment="textStart"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_l"
        app:icon="@drawable/ic_arrow_right"
        app:iconGravity="end"
        app:iconTint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/languageBtn"
        style="@style/Widget.Material3.Button.TextButton"
        android:layout_width="@dimen/default_size"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_s"
        android:layout_marginEnd="@dimen/margin_s"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/language"
        android:textAlignment="textStart"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_l"
        app:icon="@drawable/ic_arrow_right"
        app:iconGravity="end"
        app:iconTint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profileSettingBtn" />

    <Button
        android:id="@+id/termOfServiceBtn"
        style="@style/Widget.Material3.Button.TextButton"
        android:layout_width="@dimen/default_size"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_s"
        android:layout_marginEnd="@dimen/margin_s"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/terms_of_service"
        android:textAlignment="textStart"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_l"
        app:icon="@drawable/ic_arrow_right"
        app:iconGravity="end"
        app:iconTint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/languageBtn"
        tools:text="Terms of service" />

    <Button
        android:id="@+id/logoutBtn"
        android:layout_width="@dimen/default_size"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_xl"
        android:layout_marginTop="@dimen/margin_m"
        android:layout_marginEnd="@dimen/margin_xl"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/logout"
        app:backgroundTint="@color/red"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/termOfServiceBtn"
        app:shapeAppearance="@style/roundCorner" />

</androidx.constraintlayout.widget.ConstraintLayout>