<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.home.post.PostXrayActivity">

    <ImageView
        android:id="@+id/previewIv"
        android:layout_width="@dimen/default_size"
        android:layout_height="@dimen/default_size"
        android:layout_marginTop="@dimen/margin_xl"
        android:contentDescription="@string/content_desc_image_preview"
        android:padding="@dimen/padding_m"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toTopOf="@+id/horizontalGuideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_placeholder" />

    <TextView
        android:id="@+id/noteTv"
        android:layout_width="@dimen/default_size"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_l"
        android:layout_marginTop="@dimen/margin_m"
        android:layout_marginEnd="@dimen/margin_l"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/body_message_post_xray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/horizontalGuideline" />


    <Button
        android:id="@+id/openCameraBtn"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="@dimen/default_size"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_l"
        android:layout_marginTop="@dimen/margin_m"
        android:layout_marginEnd="@dimen/margin_l"
        android:fontFamily="@font/poppins_medium"
        android:padding="@dimen/padding_m"
        android:text="@string/camera"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/noteTv"
        app:shapeAppearance="@style/roundCorner"
        app:strokeColor="@color/blue_700" />

    <Button
        android:id="@+id/openGalleryBtn"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="@dimen/default_size"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_m"
        android:fontFamily="@font/poppins_medium"
        android:padding="@dimen/margin_m"
        android:text="@string/gallery"
        app:layout_constraintEnd_toEndOf="@+id/openCameraBtn"
        app:layout_constraintStart_toStartOf="@+id/openCameraBtn"
        app:layout_constraintTop_toBottomOf="@+id/openCameraBtn"
        app:shapeAppearance="@style/roundCorner"
        app:strokeColor="@color/blue_700" />

    <Button
        android:id="@+id/uploadBtn"
        android:layout_width="@dimen/default_size"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_l"
        android:layout_marginEnd="@dimen/margin_l"
        android:layout_marginBottom="@dimen/margin_l"
        android:fontFamily="@font/poppins_medium"
        android:padding="@dimen/padding_m"
        android:text="@string/detect"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:shapeAppearance="@style/roundCorner" />

    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:id="@+id/progressbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horizontalGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.45" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/verticalGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

</androidx.constraintlayout.widget.ConstraintLayout>