<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/margin_s">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/posterIv"
        android:layout_width="@dimen/image_article_size"
        android:layout_height="@dimen/image_article_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:shapeAppearanceOverlay="@style/roundCorner"
        tools:src="@tools:sample/avatars" />

    <TextView
        android:id="@+id/headlineTv"
        android:layout_width="@dimen/default_size"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_m"
        android:layout_marginTop="@dimen/margin_m"
        android:layout_marginEnd="@dimen/margin_m"
        android:fontFamily="@font/poppins_medium"
        android:hint="@string/article_title"
        android:maxLines="2"
        android:textSize="@dimen/text_size_m"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/posterIv"
        app:layout_constraintTop_toTopOf="@+id/posterIv"
        tools:text="@string/dummy_article_title" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardCategory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_s"
        app:cardBackgroundColor="@color/blue_500"
        app:layout_constraintStart_toStartOf="@+id/headlineTv"
        app:layout_constraintTop_toBottomOf="@+id/headlineTv"
        app:shapeAppearance="@style/roundCorner"
        app:strokeColor="@android:color/transparent">


        <TextView
            android:id="@+id/categoryArticleTv"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:fontFamily="@font/poppins_regular"
            android:padding="@dimen/padding_xs"
            android:text="@string/article_category"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_s"
            tools:text="Covid-19" />

    </com.google.android.material.card.MaterialCardView>
</androidx.constraintlayout.widget.ConstraintLayout>